update artifactory refs